[gd_scene load_steps=23 format=3 uid="uid://b2hkp10y1jajr"]

[ext_resource type="Script" path="res://game/enemy/enemy.gd" id="1_op4wj"]
[ext_resource type="Texture2D" uid="uid://v3pjkwx8pmfl" path="res://assets/tiny_swords/Factions/Knights/Troops/Archer/Blue/Archer_Blue.png" id="2_hfui1"]
[ext_resource type="Script" path="res://game/enemy/bow.gd" id="3_4434a"]
[ext_resource type="Script" path="res://game/systems/statemachine/statemachine.gd" id="4_hhlqu"]
[ext_resource type="Script" path="res://game/systems/components/target_component.gd" id="5_3c16d"]
[ext_resource type="Script" path="res://game/enemy/ai_states/guard.gd" id="5_perw3"]
[ext_resource type="Script" path="res://game/systems/components/movement_component.gd" id="6_ma3y3"]
[ext_resource type="Script" path="res://game/enemy/ai_states/alert.gd" id="6_mkba2"]
[ext_resource type="Script" path="res://game/enemy/ai_states/notify.gd" id="7_2bone"]
[ext_resource type="Script" path="res://game/systems/components/listener_component.gd" id="7_beowh"]
[ext_resource type="Script" path="res://game/enemy/ai_states/attack.gd" id="8_05fvg"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_775cu"]
radius = 18.0
height = 60.0

[sub_resource type="Animation" id="Animation_qlr8w"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Model:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Model:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="Animation" id="Animation_iimav"]
resource_name = "attack_down"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Model:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Model:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [47, 48, 49, 50, 51, 52, 53, 54, 55]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Bow")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.7),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"fire"
}]
}

[sub_resource type="Animation" id="Animation_ye4so"]
resource_name = "attack_left"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Model:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Model:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [31, 32, 33, 34, 35, 36, 37, 38, 39]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Bow")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.7),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"fire"
}]
}

[sub_resource type="Animation" id="Animation_y0aou"]
resource_name = "attack_right"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Model:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Model:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [31, 32, 33, 34, 35, 36, 37, 38, 39]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Bow")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.7),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"fire"
}]
}

[sub_resource type="Animation" id="Animation_8q4eb"]
resource_name = "attack_up"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Model:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Model:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20, 21, 22, 23, 24]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Bow")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"fire"
}]
}

[sub_resource type="Animation" id="Animation_pxf68"]
resource_name = "idle_left"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Model:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Model:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 3, 4, 5, 9]
}

[sub_resource type="Animation" id="Animation_jcvpi"]
resource_name = "idle_right"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Model:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Model:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 3, 4, 5, 9]
}

[sub_resource type="Animation" id="Animation_d0gqg"]
resource_name = "walk_left"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Model:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Model:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13]
}

[sub_resource type="Animation" id="Animation_lj6hp"]
resource_name = "walk_right"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Model:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Model:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s0pas"]
_data = {
"RESET": SubResource("Animation_qlr8w"),
"attack_down": SubResource("Animation_iimav"),
"attack_left": SubResource("Animation_ye4so"),
"attack_right": SubResource("Animation_y0aou"),
"attack_up": SubResource("Animation_8q4eb"),
"idle_left": SubResource("Animation_pxf68"),
"idle_right": SubResource("Animation_jcvpi"),
"walk_left": SubResource("Animation_d0gqg"),
"walk_right": SubResource("Animation_lj6hp")
}

[node name="enemyRange" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 2
collision_mask = 7
script = ExtResource("1_op4wj")
movement_speed = 50.0

[node name="Model" type="Sprite2D" parent="."]
texture = ExtResource("2_hfui1")
flip_h = true
hframes = 8
vframes = 7
frame = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_775cu")

[node name="Bow" type="Node2D" parent="." node_paths=PackedStringArray("target_component")]
script = ExtResource("3_4434a")
target_component = NodePath("../target_component")

[node name="Animation" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_s0pas")
}

[node name="Brain" type="Node2D" parent="." node_paths=PackedStringArray("target_component", "movement_component", "listener_component", "start_state")]
script = ExtResource("4_hhlqu")
target_component = NodePath("../target_component")
movement_component = NodePath("../movement_component")
listener_component = NodePath("../listener_component")
start_state = NodePath("Guard")

[node name="Guard" type="Node2D" parent="Brain" node_paths=PackedStringArray("seen_target")]
script = ExtResource("5_perw3")
seen_target = NodePath("../Alert")

[node name="Alert" type="Node2D" parent="Brain" node_paths=PackedStringArray("after_alert_time")]
script = ExtResource("6_mkba2")
after_alert_time = NodePath("../Notify")

[node name="Notify" type="Node2D" parent="Brain" node_paths=PackedStringArray("next_state")]
script = ExtResource("7_2bone")
next_state = NodePath("../Attack")

[node name="Attack" type="Node2D" parent="Brain" node_paths=PackedStringArray("after_attack")]
script = ExtResource("8_05fvg")
after_attack = NodePath("../Guard")
attack_range = 500.0

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_postprocessing = 1

[node name="target_component" type="Node2D" parent="."]
script = ExtResource("5_3c16d")
target_group = "player"

[node name="movement_component" type="Node2D" parent="." node_paths=PackedStringArray("character", "agent")]
script = ExtResource("6_ma3y3")
character = NodePath("..")
agent = NodePath("../NavigationAgent2D")
min_distance = 60

[node name="listener_component" type="Node2D" parent="." groups=["listener"]]
script = ExtResource("7_beowh")
